# Anupam-Coin

./: .env  .env.example  ANALYSIS_REPORT.md  Anchor.toml  CIRCUIT_BREAKER_IMPLEMENTATION.md  README.md  admin.json  collateral-vault.json  fee.json  index.ts  jest.config.js  package-lock.json  package.json  run-tests.js  tsconfig.json
abi/: dao.json
app/: .env  .gitignore  README.md  package-lock.json  package.json
app/.next/: trace
app/abi/: dao.d.ts  swap-apm.json
app/app/: layout.tsx  page.tsx
app/components/: TokenErrorModal.tsx  admin-whitelist.tsx  governance-overview.tsx  proposal-creation.tsx  voting-page.tsx  wallet-button.tsx  wallet-status.tsx
app/contexts/: wallet-context.tsx
app/helper/: dao-helpers.ts
app/hooks/: use-api.tsx
cmd/: cron-job.ts  swap-job.ts
migrations/: deploy.ts
programs/anupam-coin/: Cargo.toml
programs/anupam-token/: Cargo.toml
programs/dao-program/: Cargo.toml
programs/dao-program/src/: lib.rs
programs/liquidity-pool/: Cargo.toml
src/: emergency-system-startup.ts  price-calculation.jest.test.ts
src/controller/: calculate-price.ts  contractController.ts  emergency-breaker.ts  emergency-price-service.ts  price-feed.ts  (+1 more)
tests/: README.md  anupam-coin.ts  bull-market-analysis.js  bull-market-analysis.ts  demo-apm-calculation.js  market-crash-analysis.js  market-crash-analysis.ts  mock-pyth.ts  real-market-test.js  real-market-test.ts  run-all-tests.js  run-all-tests.ts  test-circuit-breaker.js  test-circuit-breaker.ts  test-swap-manager.js  ultra-sensitive-test.js  ultra-sensitive-test.ts
(+65 files in other folders)
